--- a/Caliel.Base64Diff.Api.Tests.Unit/Caliel.Base64Diff.Api.Tests.Unit.csproj
+++ b/Caliel.Base64Diff.Api.Tests.Unit/Caliel.Base64Diff.Api.Tests.Unit.csproj
@@ -4,17 +4,16 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
-
-    <AssemblyName>Caliel.Base64Diff.Api.Tests.Integration</AssemblyName>
-
-    <RootNamespace>Caliel.Base64Diff.Api.Tests.Integration</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.2.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.2.0" />
-    <PackageReference Include="RestSharp" Version="106.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Caliel.Base64Diff.Api\Caliel.Base64Diff.Api.csproj" />
   </ItemGroup>
 
 </Project>
