--- a/Caliel.Base64Diff.Domain/Caliel.Base64Diff.Domain.csproj
+++ b/Caliel.Base64Diff.Domain/Caliel.Base64Diff.Domain.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="System">
       <HintPath>System</HintPath>
     </Reference>
