Using FIle System to keep files

--- a/Caliel.Base64Diff.Domain/Caliel.Base64Diff.Domain.csproj
+++ b/Caliel.Base64Diff.Domain/Caliel.Base64Diff.Domain.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Caliel.Base64Diff.Data\Caliel.Base64Diff.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="System">
       <HintPath>System</HintPath>
     </Reference>
