Adjust in project names and namespaces

--- a/Caliel.Base64Diff.Tests/Caliel.Base64Diff.Tests.csproj
+++ b/Caliel.Base64Diff.Tests/Caliel.Base64Diff.Tests.csproj
@@ -5,9 +5,9 @@
 
     <IsPackable>false</IsPackable>
 
-    <AssemblyName>Caliel.Base64Diff.Api.Tests.Integration</AssemblyName>
+    <AssemblyName>Caliel.Base64Diff.Tests</AssemblyName>
 
-    <RootNamespace>Caliel.Base64Diff.Api.Tests.Integration</RootNamespace>
+    <RootNamespace>Caliel.Base64Diff.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
